--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "babel-plugin-transform-runtime": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "babel-runtime": "^6.3.13",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
@@ -32,5 +31,8 @@
     "template-html-loader": "0.0.3",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.5.0"
   }
 }
